src/index.css
* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
	scroll-behavior: smooth;
}


::selection{
	background-color: #b75a64;
}
:root {
	--extra-large-fs: 9rem; /*144px; */
	--semi-extra-large-fs: 4.375rem; /*70px;  */
	--mid-extra-large-fs: 2rem; /*32rem*/
	--large-fs: 3rem /*48px*/;
	--semi-large-fs: 1.875rem; /*30px*/
	--medium-fs: 1.5rem; /*24px*/
	--semi-medium-fs: 1.2rem; /*18px*/
	--default-fs: 1rem; /*16px*/

	/*colors*/
	--dark-color: #181b1b;
	--mid-dark-color: #1d2020;
	--pink-color: #b75a64;
	--dark-pink-color: #ee0f64;
	--darker-pink-color: #a70c48;
	--cream-color: #b4ab98;
	--grey-color: #dedddd;
	--light-grey-color: #d1d1d1;
	--white-color: #ccddef;

	/*spacing*/
	--spacing-1: 1%;
	--spacing-2: 2%;
	--spacing-3: 3%;
	--spacing-5: 5%;
	--spacing-7: 7%;
	--spacing-8: 8%;
	--spacing-10: 10%;
	--spacing-15: 15%;
	--spacing-20: 20%;
	--spacing-25: 25%;
	--spacing-40: 40%;
	--spacing-50: 50%;
	--spacing-60: 60%;
	--spacing-70: 70%;
	--spacing-80: 80%;
	--spacing-100: 100%;
	--spacing-110: 110%;
	--spacing-130: 130%;
}

html {
	width: 100%;
	height: 100%;
	background: var(--hero-white-color);

}

body {
	width: 100%;
	min-height: 100%;
	list-style: none;
}

a {
	text-decoration: none;
}

.app-body {
	background: rgb(183, 90, 100);
	background: linear-gradient(
		90deg,
		rgba(183, 90, 100, 1) 0%,
		rgba(111, 39, 46, 1) 0%,
		rgba(183, 90, 100, 1) 31%
	);

}

